# rust_blog_tutorial

./: README.md
frontend/: Cargo.toml  index.html  package-lock.json
frontend/public/: index.html  styles.css
frontend/src/: app.rs  main.rs  package.json
frontend/src/components/: header.rs  login.rs  mod.rs  post_details.rs  post_form.rs  post_list.rs  post_update.rs  register.rs
