[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
wasm-bindgen-futures = "0.4.50"
gloo-net = "0.6.0"
log = "0.4.25"
gloo = "0.11.0"
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json"] }
